# envmanager

./: Cargo.toml  README.MD  todos.md
migrations/2025-02-08-214054_create_environments/: down.sql  up.sql
migrations/2025-02-08-214124_group_environments/: down.sql  up.sql
migrations/2025-02-08-214131_executables/: down.sql  up.sql
migrations/2025-02-08-214142_configuration/: down.sql  up.sql
migrations/2025-02-08-214202_m_to_m_group_env/: down.sql  up.sql
migrations/2025-02-08-214210_m_to_m_group_config/: down.sql  up.sql
migrations/2025-10-28-142750_executable_state/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs  ui.rs  vim.rs
