[package]
name = "vimming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
diesel = { version = "2.2.7", features = ["returning_clauses_for_sqlite_3_35", "sqlite"] }
directories = "6.0.0"
